--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Photo Feed</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+  </head>
+  <body>
+    <header>
+      <h1>Simple Instagram Photo Feed with HTML CSS</h1>
+    </header>
+    <section>
+      <div class="front">
+        <div class="top"></div>
+        <div class="image"></div>
+        <div class="descrip."></div>
+    </section>
+    <footer>
+      
+    </footer>
+  </body>
+</html>
