--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="top"></div>
         <div class="image"></div>
         <div class="descrip."></div>
+      </div>  
     </section>
     <footer>
       
