--- a/index.html
+++ b/index.html
@@ -10,9 +10,36 @@
     </header>
     <section>
       <div class="front">
-        <div class="top"></div>
-        <div class="image"></div>
-        <div class="descrip."></div>
+        <div class="top">
+            <h2>My first photo</h2>
+            <p class="date">12/14</p>
+        </div>
+        <div class="img">
+            <img src="https://www.lifewire.com/thmb/VZMDtSMendBSrdbGrfLOoHADXDU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/low-angle-view-of-young-woman-taking-selfie-with-dog-through-smart-phone-at-beach-against-clear-sky-1084684208-7e6a0a114e4144129d9b7ff7fd3d47c4.jpg" alt="">
+        </div>
+        <div class="description">First photo of the feed...<strong>#BreatheCode</strong></div>
+      </div>  
+
+      <div class="front">
+        <div class="top">
+            <h2>New photo</h2>
+            <p class="date">12/14</p>
+        </div>
+        <div class="img">
+            <img src="https://hips.hearstapps.com/hmg-prod/images/240869308-353027939848691-7860055300173171509-n-1632865819.jpg?crop=1xw:0.75xh;center,top&resize=1200:*" alt="">
+        </div>
+        <div class="description">First photo of the feed...<strong>#BreatheCode</strong></div>
+      </div>  
+
+      <div class="front">
+        <div class="top">
+            <h2>Recent photo</h2>
+            <p class="date">12/14</p>
+        </div>
+        <div class="img">
+            <img src="https://img2.rtve.es/i/?w=1600&i=1688568742317.jpg" alt="">
+        </div>
+        <div class="description">First photo of the feed...<strong>#BreatheCode</strong></div>
       </div>  
     </section>
     <footer>
