--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <p class="date">12/14</p>
         </div>
         <div class="img">
-            <img src="https://www.lifewire.com/thmb/VZMDtSMendBSrdbGrfLOoHADXDU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/low-angle-view-of-young-woman-taking-selfie-with-dog-through-smart-phone-at-beach-against-clear-sky-1084684208-7e6a0a114e4144129d9b7ff7fd3d47c4.jpg" alt="">
+            <img src="https://m.media-amazon.com/images/I/71TI8uHgy6L.jpg" alt="">
         </div>
-        <div class="description">First photo of the feed...<strong>#BreatheCode</strong></div>
+        <div class="description">This is my first photo of the feed, this is a multi line comment for testing purposes. I'm learnign to code with...<strong>#BreatheCode</strong></div>
       </div>  
 
       <div class="front">
@@ -26,9 +26,9 @@
             <p class="date">12/14</p>
         </div>
         <div class="img">
-            <img src="https://hips.hearstapps.com/hmg-prod/images/240869308-353027939848691-7860055300173171509-n-1632865819.jpg?crop=1xw:0.75xh;center,top&resize=1200:*" alt="">
+            <img src="https://images.ctfassets.net/sfnkq8lmu5d7/3uflcBlX5j5maCsll5T3LJ/acb166d17e76373ab539580945e2b4d7/The-Wildest_Editorial_Baby_Face-The_Allure_of_Cute_Dogs_Hero.jpg?w=1000&h=750&fl=progressive&q=70&fm=jpg" alt="">
         </div>
-        <div class="description">First photo of the feed...<strong>#BreatheCode</strong></div>
+        <div class="description">The internet approves this cute dog<strong>#BreatheCode</strong></div>
       </div>  
 
       <div class="front">
@@ -37,9 +37,9 @@
             <p class="date">12/14</p>
         </div>
         <div class="img">
-            <img src="https://img2.rtve.es/i/?w=1600&i=1688568742317.jpg" alt="">
+            <img src="https://www.recetasnestle.cl/sites/default/files/srh_recipes/efa409a900e1917c0ba5efbe1e897bfc.jpg" alt="">
         </div>
-        <div class="description">First photo of the feed...<strong>#BreatheCode</strong></div>
+        <div class="description">Because no photo feed is cool without some food on it!<strong>#BreatheCode</strong></div>
       </div>  
     </section>
     <footer>
