--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css" type="text/css" />
-    <title>Bootstrap Instagram Photo Feed</title>
+    <title>Instagram Photo Feed with Bootstrap</title>
 </head>
 
 <body>
@@ -123,6 +123,7 @@
 
 </html>
 
+<!-- Sorry, kinda I kinda forgotted to change the title of the project on github --!>
 <!-- https://getbootstrap.com/docs/5.0/components/navs-tabs/-->
 <!-- trademark=&#8482;-->
 <!-- check the page: https:/-->
